k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-prod
  labels:
    app.kubernetes.io/part-of: k8s-observability-stack
